GitVersion1/objects/No_Opportunities_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <label>No Opportunities Snapshot</label>
    <nameField>
        <label>No Opportunities Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>No Opportunities Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>